# btc_project

./: README.md  btc_node.sh
op_cat_test/: Cargo.toml
op_cat_test/src/: main.rs  simple_script.rs  tx_analyzer.rs
tmp/: Dockerfile  build.sh  run.sh
