[package]
name = "op_cat_test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bitcoin = { version = "0.31", features = ["rand", "secp-recovery"] }
bitcoin_hashes = "0.13"
bitcoincore-rpc = "0.18"
log = "0.4"
secp256k1 = { version = "0.27", features = ["rand", "bitcoin_hashes"] }
env_logger = "0.10"
serde_json = "1.0"
hex = "0.4"